infrastructure/argocd-ingress/manifests/argocd-server-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-grpc
  namespace: argocd
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    appProtocol: h2c
    targetPort: 8080
  selector:
    app.kubernetes.io/name: argocd-server
  type: ClusterIP
