infrastructure/argocd-ingress/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: default
  hostnames:
  - "argocd.thorntoncloud.com"
  rules:
  - matches:
    - headers:
      - name: Content-Type
        # Change the type to RegularExpression and the value to match anything that starts with 'application/grpc'
        type: RegularExpression 
        value: "application/grpc.*" 
    backendRefs:
    - name: argocd-server-grpc
      port: 80
      
  # RULE 2: Low Priority - Catch everything else (Web UI)
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
